# seeker

./: Cargo.toml  LICENSE
crates/seeker_config/: Cargo.toml
crates/seeker_config/src/: lib.rs
crates/seeker_embed_folder/: Cargo.toml
crates/seeker_embed_folder/src/: lib.rs
crates/seeker_embed_plugin/: Cargo.toml
crates/seeker_embed_plugin/src/: lib.rs
crates/seeker_home_plugin/: Cargo.toml
crates/seeker_home_plugin/src/: lib.rs  menu_plugin.rs
crates/seeker_home_plugin/src/fn_plugin/: file_dialog.rs  file_dialog_plugin.rs  fn_plugin.rs  mod.rs  new_folder_plugin.rs  project.rs
crates/seeker_resource/: Cargo.toml
crates/seeker_resource/src/: color.rs  file.rs  fonts.rs  lib.rs  project_list.rs
crates/seeker_scroll/: Cargo.toml
crates/seeker_scroll/src/: lib.rs
crates/seeker_sqlite/: Cargo.toml
crates/seeker_sqlite/.sql_reverse/: default_sqlite.json  sqlite.sh  sqlite.yml
crates/seeker_sqlite/.sql_reverse/templates/: sqlite.tera
crates/seeker_sqlite/src/: lib.rs
crates/seeker_sqlite/src/seeker/: mod.rs  project.rs
crates/seeker_state/: Cargo.toml
crates/seeker_state/src/: lib.rs
crates/seeker_trait/: Cargo.toml
crates/seeker_trait/src/: lib.rs
seeker/: Cargo.toml
seeker/src/: main.rs
