[package]
name = "seeker"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true, features = ["bevy_dev_tools", "experimental_bevy_ui_widgets", "embedded_watcher", "file_watcher"] }
seeker_scroll.workspace = true
seeker_resource.workspace = true
seeker_state.workspace = true
seeker_home_plugin.workspace = true
seeker_config.workspace = true
seeker_embed_plugin.workspace = true
